Fix to scrolling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     overflow-x: hidden;
 }
 
-.html {
+body {
   overflow: hidden;
 }
 
